[package]
name = "montecarlo_gui"
version = "0.1.0"
authors = ["CLEARoot <CLEARoot>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.cairo-rs]
version = "0.9.1"
features = ["v1_16"]